[package]
name = "lwext4_rust"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>"]
version = "0.1.0"
edition = "2018"
license = "GPL-2.0"
repository = "https://github.com/elliott10/lwext4_rust"
description = "lwext4 in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.1"
